frontend/test/should_fail/index_exec_edge_isInFromIndexSame_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:short)
{
	{ i=isInEdgesFromIndexSame(::e, bari, 42) }
}
